--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>$CRACK token on SOL</title>
   <style>
     body {
@@ -47,6 +48,8 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <img src="logo.png" alt="logo" class="logo">
   <div class="container">
     <h1>$CRACK PROJECT</h1>
 
